tests/idris2/basic031/expected
1/1: Building erased (erased.idr)
Error: While processing left hand side of nameOf. Can't match on Bool (Erased argument).

erased.idr:7:17--7:21
   |
 7 | nameOf (MyMaybe Bool) = "MyMaybe Bool"
   |                 ^^^^

